--- a/casaPorFora.html
+++ b/casaPorFora.html
@@ -283,7 +283,7 @@ top:13.1rem;
       <i class='bx bx-x'></i>
     </div>
     <!-- Modal Image -->
-    <img src="star-trophy.png" alt="" class="modal__img">
+    <img src="img/star-trophy.png" alt="" class="modal__img">
     <!-- Modal Content -->
     <h1 class="modal__title">Bom Trabalho!</h1>
     <p class="modal__description">Você concluiu o Desafio</p>
@@ -341,7 +341,7 @@ top:13.1rem;
       <div id="desenhoCasa"><center><div class="backDoor" id="entrada">
         <div class="botzin">
 
-          <img src="botEsquerdo.png" id="bot">
+          <img src="img/botEsquerdo.png" id="bot">
         </div>
   <div class="door" id="ports">  
   </div>
@@ -431,7 +431,7 @@ setTimeout(() => {
 $(document).ready(function() {
   var img = document.querySelector("#bot");
 $(".botzin").addClass("acertou");
-img.src = "botVoando.png";
+img.src = "img/botVoando.png";
 });
 }, "2000");
 
@@ -439,7 +439,7 @@ setTimeout(() => {
 $(document).ready(function() {
   var img = document.querySelector("#bot");
 $(".botzin").addClass("acertou2");
-img.src = "botPensando.png";
+img.src = "img/botPensando.png";
 });
 }, "4000");
 
@@ -447,7 +447,7 @@ setTimeout(() => {
 $(document).ready(function() {
   var img = document.querySelector("#bot");
 
-img.src = "botPensando.png";
+img.src = "img/botPensando.png";
 });
 }, "4000");
 
@@ -455,7 +455,7 @@ setTimeout(() => {
 $(document).ready(function() {
   var img = document.querySelector("#bot");
   $(".botzin").addClass("final");
-img.src = "botFala.png";
+img.src = "img/botFala.png";
 img.style.width = "9.7rem";
 img.style.position = "relative";
 img.style.right = "5rem";
