--- a/casaPorDentro.html
+++ b/casaPorDentro.html
@@ -111,7 +111,7 @@ $(".botzin").addClass("acertou")
 });
 }, "2000");
 setTimeout(() => {
-
+window.location.href ="index.html";
 }, "3100");
 } else{
     var img = document.querySelector("#bot");
