--- a/houses-game/index.html
+++ b/houses-game/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>House-game</title>
+    <title>House-game ( branch-bot )</title>
     <link rel="icon" href="assets/img/casa.png" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
 </head>
